manifests/api.yml
apiVersion: v1
kind: Namespace
metadata:
  name: workshop-3days
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: workshop-3days
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: docker.io/library/workshop-api:latest
        imagePullPolicy: IfNotPresent
        # livenessProbe:
        #     httpGet:
        #       path: /health
        #       port: 8080
        #     initialDelaySeconds: 3
        #     periodSeconds: 3
        ports:
          - name: http
            containerPort: 8080
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: workshop-3days
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: web
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: workshop-3days
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api
            port:
              number: 80
